<resources>
    <string name="app_name">Mincher</string>
    <string name="action_settings">Settings</string>
    <string name="library_title_text">Library</string>
    <string name="machine_settings_title_text">Steampunk Settings</string>
    <string name="account_settings_title_text">Account Settings</string>
    <string name="cleaning_cycle_title_text">Cleaning</string>
    <string name="privacy_settings_title_text">Privacy Settings</string>
    <string name="terms_and_policies_title_text">Terms &amp; Policies</string>
    <string name="boiler_temp_label_text">Boiler Temp</string>
    <string name="boiler_max_temp_text">205</string>
    <string name="boiler_min_temp_text">150</string>
    <string name="rinse_temp_label_text">Rinse Temp</string>
    <string name="rinse_max_temp_text">205</string>
    <string name="rinse_min_temp_text">150</string>
    <string name="rinse_max_vol_text">16</string>
    <string name="rinse_min_vol_text">0</string>
    <string name="rinse_vol_label_text">Rinse Volume</string>
    <string name="hello_world">Hello world!</string>
    <string name="volume_label_default">0</string>
    <string name="roaster_label_default">-</string>
    <string name="coffee_label_default">-</string>
    <string name="brew_label_text">BREW</string>
    <string name="start_label_text">START</string>
    <string name="rinse_label_text">RINSE</string>
    <string name="title_activity_tea_recipe_editor">TeaRecipeEditor</string>
    <string name="title_activity_spactivity">SPRecipe</string>
    <string name="title_activity_spmain_menu">SPMainMenu</string>
    <string name="TeaRecipeBtnText">New Tea Recipe</string>
    <string name="CoffeeRecipeBtnText">New Coffee Recipe</string>
    <string name="teaRecipeStackLabel">Stack</string>
    <string name="recipe_editor_title_text">Recipe Editor</string>
    <string name="tea_recipe_producer_label">Producer</string>
    <string name="tea_recipe_name_field_default_text">Recipe</string>
    <string name="coffee_recipe_producer_label">Producer</string>
    <string name="coffee_recipe_name_field_default_text">Recipe</string>
    <string name="tea_recipe_filter_label_text">Filter</string>
    <string name="coffee_recipe_filter_label_text">Filter</string>
    <string-array name="coffee_filter_types">
        <item>Press</item>
        <item>Mid</item>
        <item>Clear</item>
        <item>Press w/Paper</item>
        <item>Mid w/Paper</item>
        <item>Clear w/Paper</item>
    </string-array>
    <string-array name="tea_filter_types">
        <item>Press</item>
        <item>Mid</item>
        <item>Clear</item>
    </string-array>
    <string-array name="coffee_grind_types">
        <item>Ditting</item>
        <item>Ceado</item>
        <item>Bunn</item>
        <item>Mazzer</item>
        <item>Wilbur Curtis</item>
        <item>Rancilio Rocky Doser</item>
        <item>West Bend</item>
    </string-array>
    <string-array name="countries">
        <item>Argentina (AR)</item>
        <item>Australia (AU)</item>
        <item>Austria (AT)</item>
        <item>Belgium (BE)</item>
        <item>Brazil (BR)</item>
        <item>Canada (CA)</item>
        <item>Chile (CL)</item>
        <item>China (CN)</item>
        <item>Columbia (CO)</item>
        <item>Croatia (HR)</item>
        <item>Czech (cz)</item>
        <item>Ecuador (EC)</item>
        <item>Finland (FI)</item>
        <item>France (FR)</item>
        <item>Germany (DE)</item>
        <item>Iceland (IS)</item>
        <item>India (IN)</item>
        <item>Indonesia (ID)</item>
        <item>Ireland (IE)</item>
        <item>Israel (IL)</item>
        <item>Italy (IT)</item>
        <item>Japan (JP)</item>
        <item>Kuwait (KW)</item>
        <item>Macedonia (MK)</item>
        <item>Mexico (MX)</item>
        <item>Netherlands (NL)</item>
        <item>Norway (NO)</item>
        <item>Peru (PE)</item>
        <item>Poland (PL)</item>
        <item>Portugal (PT)</item>
        <item>Paraguay (PY)</item>
        <item>Romania (RO)</item>
        <item>Russia (RU)</item>
        <item>Slovakia (SK)</item>
        <item>Slovenia (SI)</item>
        <item>South Africa (ZA)</item>
        <item>Spain (ES)</item>
        <item>Sweden (SE)</item>
        <item>Switzerland (CH)</item>
        <item>Turkey (TR)</item>
        <item>United Kingdom (UK)</item>
        <item>United States of America (US)</item>
        <item>Uruguay (UY)</item>
    </string-array>
    <string name="filter_spinner_title">Choose filter...</string>
    <string name="tea_recipe_grams_label_text">Grams</string>
    <string name="tea_recipe_grams_field_default_value">5.25</string>
    <string name="coffee_recipe_grams_label_text">Grams</string>
    <string name="coffee_recipe_grams_field_default_value">5.25</string>
    <string name="tea_recipe_tsp_label_text">tsp</string>
    <string name="tea_recipe_tsp_field_default_value">0</string>
    <string name="tea_recipe_max_temp_text">212</string>
    <string name="tea_recipe_min_temp_text">140</string>
    <string name="tea_recipe_max_vol_text">16</string>
    <string name="tea_recipe_min_vol_text">0</string>
    <string name="tea_recipe_temp_label_text">Temperature</string>
    <string name="tea_recipe_vol_label_text">Volume</string>
    <string name="recipe_total_time_title">Total Time</string>
    <string name="recipe_agitation_time_label_text_1">Agitation 1</string>
    <string name="recipe_vacuum_break_time_text">Vacuum Break</string>
    <string name="recipe_extraction_time_label_text">Extract</string>
    <string name="recipe_agitation_time_label_text_2">Agitation 2</string>
    <string name="recipe_agitation_time_label_text_3">Agitation 3</string>
    <string name="title_activity_main_menu_mockup">MainMenuMockup</string>
    <string name="main_menu_crucibles_label_text">Crucibles</string>
    <string name="main_menu_dashboard_label_text">Dashboard</string>
    <string name="main_menu_library_label_text">Library</string>
    <string name="main_menu_my_recipes_label_text">My Recipes</string>
    <string name="main_menu_favorites_label_text">Favorites</string>
    <string name="main_menu_add_coffee_recipe_label_text">Add Coffee Recipe</string>
    <string name="main_menu_add_tea_recipe_label_text">Add Tea Recipe</string>
    <string name="main_menu_machine_settings_label_text">Steampunk Settings</string>
    <string name="main_menu_cleaning_cycle_label_text">Cleaning Cycle</string>
    <string name="main_menu_account_settings_label_text">Account Settings</string>
    <string name="main_menu_check_for_updates_label_text">Check For Updates</string>
    <string name="main_menu_privacy_settings_label_text">Privacy Settings</string>
    <string name="main_menu_terms_and_policies_label_text">Terms &amp; Policies</string>
    <string name="main_menu_logout_label_text">Logout</string>
    <string name="elevation_calibrate_text">calibrate</string>
    <string name="elevation_text">Elevation</string>
    <string name="favorites_title_text">Favorites</string>
    <string name="my_recipes_title_text">My Recipes</string>
    <string name="login_submit_text">Log In</string>
    <string name="login_username_default_text">Username</string>
    <string name="login_password_default_text">Password</string>
    <string name="home_crucibles_title_text">Mincher</string>
    <string name="coffee_recipe_grind_label_text">Grind</string>
    <string name="subscribe_to">Subscribe To Roaster</string>
    <string name="default_library_list_title_text">Your Current Recipes</string>
    <string name="duplicate_recipe_button_text">Duplicate</string>
    <string name="publish_recipe_button_text">Publish</string>
    <string name="favorite_recipe_button_text">Favorite</string>
    <string name="edit_recipe_button_text">Edit</string>
    <string name="login_reset_text">Reset Password</string>
    <string name="cleaning_cycle_settings_title_text">Cleaning Settings</string>
    <string name="main_menu_force_stop_label_text">Force Stop</string>
    <string name="change_password_modal_title">&quot;Change Password&quot;</string>
    <string name="change_password_old_password_hint">Old Password</string>
    <string name="change_password_new_password_hint">New Password</string>
    <string name="change_password_confirm_new_password_hint">Confirm</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="cancel_text">Cancel</string>
    <string name="submit_text">Submit</string>
    <string name="too_much_water_message">Too much water for beverage recipe. Continue brewing beverage?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="next_all_caps">NEXT</string>
    <string name="fill_all_caps">FILL</string>
    <string name="error_all_caps">ERROR</string>
    <string name="select_recipe_first_message">Please select a recipe first.</string>
    <string name="reset_this_crucible_prompt">Reset this crucible?</string>
    <string name="cancel">cancel</string>
    <string name="reset">reset</string>
    <string name="clean">CLEAN</string>
    <string name="insert_cleaning_piston_prompt">INSERT CLEANING TABLET AND PISTON</string>
    <string name="drain_crucible">DRAIN CRUCIBLE</string>
    <string name="network_error_notification">There is a Network Error</string>
    <string name="password_mismatch_notification">New password and confirmed password do not match</string>
    <string name="ok">OK</string>
    <string name="steam_needs_releasing">Excess steam needs to be released. Open all tap handles and press \'Release\' to continue.</string>
    <string name="release">Release</string>
    <string name="wait_for_recipe_backup_prompt">Please wait while we backup your recipes...</string>
    <string name="update_available_prompt">There is an update available.</string>
    <string name="update">Update</string>
    <string name="dismiss">Dismiss</string>
    <string name="milliliters_abreviation">mL</string>
    <string name="ounces_abreviation">oz</string>
    <string name="celcius_abreviation">c</string>
    <string name="fahrenheit_abreviation">f</string>
    <string name="pin_mismatch_message">Pins did not match</string>
    <string name="update_pin_success_message">Update Successful. New PIN: </string>
    <string name="update_pin_failure_message">Update failed.</string>
    <string name="choose_recipe_title">Choose Recipe:</string>
    <string name="favorites_crucible_status_brewing">Brewing</string>
    <string name="favorites_crucible_status_missing">Missing</string>
    <string name="favorites_crucible_status_empty">Empty</string>
    <string name="favorites_incomplete_machine_settings_toast">Machine-specific settings incomplete. Please ask your admin to complete these settings. Assuming 2 crucibles.</string>
    <string name="favorites_should_remove_question">Remove from favorites?</string>
    <string name="favorites_should_remove_answer_yes">Yes</string>
    <string name="favorites_should_remove_answer_no">No</string>
    <string name="steampunk_notification_title">Steampunk HMI Control Service</string>
    <string name="steampunk_notification_message">running...</string>
    <string name="subscribe_action_dialog_title">&quot;Subscribe...&quot;</string>
    <string name="subscribe_action_dialog_body">&quot;Subscribe to &quot;</string>
    <string name="ok_capitalized">Ok</string>
    <string name="cancel_capitalized">Cancel</string>
    <string name="subscribe_action_dialog_body_end">\?</string>
    <string name="subscription_successful_message">the Roaster has been sent an email</string>
    <string name="subscription_failed_message">Subscribe Attempt Failed</string>
    <string name="connect_to_network_prompt">Connect to the network...</string>
    <string name="login_failed">Login failed: </string>
    <string name="network_error_machine_settings">Network Error. Settings Saved Locally</string>
    <string name="switchboard_button_text">Switchboard</string>
</resources>