<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SPMainMenu" >

	    <LinearLayout
	        android:id="@+id/home_menu_frame"
	        android:layout_width="320dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="start"
	        android:background="@drawable/right_dk_gray_border"
	        android:orientation="vertical" >

	        <LinearLayout
	            android:id="@+id/main_menu_user_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_user" />

	            <TextView
	                android:id="@+id/main_menu_user_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="User"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/imageView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_horizontal_divider" />
	        
	        <LinearLayout
	            android:id="@+id/main_menu_crucibles_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_home" />

	            <TextView
	                android:id="@+id/main_menu_crucibles_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_crucibles_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_library_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_book" />

	            <TextView
	                android:id="@+id/main_menu_library_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_library_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_my_recipes_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_document" />

	            <TextView
	                android:id="@+id/main_menu_my_recipes_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_my_recipes_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_favorites_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_favorites" />

	            <TextView
	                android:id="@+id/main_menu_favorites_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_favorites_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>
	        
	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_add_coffee_recipe_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_coffeerecipe" />

	            <TextView
	                android:id="@+id/main_menu_add_coffee_recipe_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_add_coffee_recipe_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_add_tea_recipe_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_tearecipe" />

	            <TextView
	                android:id="@+id/main_menu_add_tea_recipe_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_add_tea_recipe_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_machine_settings_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_steampunksettings" />

	            <TextView
	                android:id="@+id/main_menu_machine_settings_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_machine_settings_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_cleaning_cycle_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding"
	            android:visibility="visible" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_blob" />

	            <TextView
	                android:id="@+id/main_menu_cleaning_cycle_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_cleaning_cycle_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/imageView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_horizontal_divider" />
	        
	        <LinearLayout
	            android:id="@+id/main_menu_check_for_updates_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_gear" />

	            <TextView
	                android:id="@+id/main_menu_account_settings_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_check_for_updates_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />

	        <LinearLayout
	            android:id="@+id/switchboard_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/ImageView01"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_gear" />

	            <TextView
	                android:id="@+id/TextView01"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/switchboard_button_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />
	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_terms_and_policies_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_info" />

	            <TextView
	                android:id="@+id/main_menu_terms_and_policies_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_terms_and_policies_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>

	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_logout_button"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_io" />

	            <TextView
	                android:id="@+id/main_menu_logout_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_logout_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>
	        
	        <ImageView
	            android:id="@+id/divider1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/main_menu_thin_horizontal_divider" />
	        	        	        
	        <LinearLayout
	            android:id="@+id/main_menu_force_stop"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="left|center_vertical"
	            android:padding="@dimen/main_menu_padding" >

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="@dimen/main_menu_padding"
	                android:src="@drawable/ic_action_io" />

	            <TextView
	                android:id="@+id/main_menu_logout_label"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/main_menu_force_stop_label_text"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@color/white" />

	        </LinearLayout>
	        
		</LinearLayout>

</RelativeLayout>
